<resources>
    <string name="app_name">Fresh Milk</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="Signup">Sign Up</string>
    <string name="dashboard">Dash Board</string>
    <string name="product_list">Product List</string>
    <string name="anchor">Fresh Milk</string>
    <string name="Prodname">Product Name</string>
    <string name="unitPrice">Unit Price</string>
    <string name="batchNo">Batch No</string>
    <string name="Add">Add Product</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="products">Products</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="Productname">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total Amount</string>
    <string name="buy">Buy</string>
    <string name="holder">Card Holder Name</string>
    <string name="cardno">Card No</string>
    <string name="cardholdername">Card Holder Name</string>
    <string name="cvv">CVV</string>
    <string name="expirydate">Expiry Date</string>
    <string name="save">Save</string>
    <string name="Description">Description</string>
    <string name="volume">Volume</string>
    <string name="liter">Liter</string>
    <string name="Liter">10l</string>
    <string name="Tittle">Product List</string>
    <string name="price">Rs.100</string>
</resources>