<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminProductUpdate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:overScrollMode="never">
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/anchor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Prodname"
                    android:textSize="16dp"
                    android:textColor="@color/main"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/et_prodName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/bordernew" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unitPrice"
                    android:textSize="16dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/main"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/et_unitPrice"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/bordernew" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/liter"
                    android:textColor="@color/main"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_liter"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/bordernew"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Description"
                    android:textColor="@color/main"
                    android:paddingBottom="10dp"
                    android:textSize="16dp"/>
                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:background="@drawable/bordernew"
                    android:paddingEnd="10dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:paddingTop="35dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_signup"
                        android:text="@string/delete"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />

                    <Button
                        android:id="@+id/btn_update"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_login"
                        android:text="@string/update"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>